fixed download cv button on mobile

--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -25,6 +25,7 @@
   color: #e91d63;
   padding: 0.375rem 1.5rem;
   font-family: Oswald;
+  max-width: 320px;
 }
 
 .menu .btn.download:hover {
@@ -105,4 +106,22 @@
 	width: 100px;
 	left: 220px;
 	/* background-color: #3498db; */
+}
+
+@media (max-width: 720px) {
+  .menu {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu .wrapper {
+    flex-direction: column;
+
+  }
+
+  .menu .btn.download {
+    margin-top: 1rem;
+  }
 }
